--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+*{
+  padding : 0;
+  margin : 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body{
+  background-color: #CEDAFF;
+  background-repeat: no-repeat;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container{
+  width: 60%;
+  background-color: #f6f2f8;
+  margin: auto;
+  padding: 40px;
+  box-shadow: -2px 3px 23px #6b4aeed6;
+  border-radius: 40px;
+  height: 500px;
+  overflow: auto ;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.container::-webkit-scrollbar{
+  background-color: transparent !important;
+  width: 2px;
+  
+  
+}
+.container::-webkit-scrollbar-thumb{
+  background: #6b4aeed6;
+  border-radius: 20px;
+  
+  
+}
+
+
+.userDetails{
+  margin-top : 100px
+}
+
+
+
+@media (max-width : 800px) {
+  .container{
+    width: 90%;
+  
+    
   }
 }
